panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__functions__test_extern_inline_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/functions/test_extern_inline_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_extern_inline_function.c"
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (return 42)))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (return (call (name f~0 `fn() -> int`))))))

----- stderr -----
